fix: harden managed billing and theme gallery